--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.facebook.android:facebook-android-sdk:5.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
 }
